--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
 
     <string name="remove_mode_enter">Tap on vertex or edge to remove it</string>
     <string name="edit_mode_enter">Tap on vertex or edge label to change number or weight</string>
+    <string name="edit_button_text">Change</string>
 
     <string name="dijkstra_mode_enter">Specify outbound vertex</string>
     <string name="dijkstra_mode_continue">Specify inbound vertex</string>
